--- a/yield/src/app/pages/trades/trades.component.html
+++ b/yield/src/app/pages/trades/trades.component.html
@@ -9,6 +9,6 @@
     (columnOrderChanged)="onColumnOrderChange($event)"></app-field-option>
 
   <!-- table review section -->
-  <app-records-table *ngIf="assignColumnChanged" ></app-records-table>
+  <app-records-table *ngIf="columnOrderChanged" ></app-records-table>
 
 </section>
