--- a/yield/src/app/pages/trades/trades.component.html
+++ b/yield/src/app/pages/trades/trades.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col w-[97%] mx-auto gap-3">
+<section>
 
   <!-- file section -->
   <app-file (fileChange)="setFileChange($event)" ></app-file>
