--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -18,7 +18,7 @@
     <div class="menu-wrap">
 
       <!-- menu top  -->
-      <div>
+      <div class="w-full">
         <hr />
         <h3 class="menu-title">markets</h3>
         <hr />
@@ -59,7 +59,7 @@
       </div>
     </div>
     
-    <div class="flex-[5] overflow-y-auto">
+    <div class="section-wrap">
       <!-- <app-markets></app-markets> -->
       <router-outlet></router-outlet>
     </div>
