--- a/yield/src/app/components/crypto/asset-card/asset-card.component.html
+++ b/yield/src/app/components/crypto/asset-card/asset-card.component.html
@@ -3,16 +3,16 @@
 
     <div class="identity-wrap">
       <label class="ml-3">
-        <img [src]="asset.images[0]" alt="asset" >
+        <img [src]="topAsset.images[0]" alt="asset" >
       </label>
       <div class="name-wrap">
         <label class="name-position-wrap">
           symbol: 
-          <span >{{ asset.symbol }}</span>
+          <span >{{ topAsset.symbol }}</span>
         </label>
         <label class="name-position-wrap">
           name: 
-          <span >{{ asset.name }}</span>
+          <span >{{ topAsset.name }}</span>
         </label>
       </div>
     </div>
@@ -20,15 +20,15 @@
     <div class="asset-data-wrap">
       <dl class="data-wrap">
         <dt>current price:</dt>
-        <dd>{{ asset.currentPrice }}</dd>
+        <dd>{{ topAsset.currentPrice }}</dd>
       </dl>
       <dl class="data-wrap">
         <dt>market cap:</dt> 
-        <dd>{{ asset.marketCap }}</dd>
+        <dd>{{ topAsset.marketCap }}</dd>
       </dl>
       <dl class="data-wrap">
         <dt>total volume:</dt>
-        <dd>{{ asset.totalVolume }}</dd>
+        <dd>{{ topAsset.totalVolume }}</dd>
       </dl>
     </div>
   </div>
