--- a/yield/src/app/pages/trades/trades.component.html
+++ b/yield/src/app/pages/trades/trades.component.html
@@ -1,10 +1,11 @@
-<section>
+<section class="overflow-auto w-full">
 
   <!-- file section -->
   <app-file (fileChange)="setFileChange($event)" ></app-file>
 
   <!-- table select section -->
   <app-field-option
+    class="overflow-auto"
     [fileChange]="fileChange"
     (columnOrderChanged)="onColumnOrderChange($event)"></app-field-option>
 
