--- a/yield/src/app/components/crypto/asset-table/asset-table.component.html
+++ b/yield/src/app/components/crypto/asset-table/asset-table.component.html
@@ -12,7 +12,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let asset of assets$ | async as assets; index as i">
+    <tr *ngFor="let asset of assets; index as i">
       <td>{{i+1}}</td>
       <td>
         <img [src]="asset.images[0]" alt="asset symbol">
