--- a/yield/src/app/components/trade/edit-trade/edit-trade.component.html
+++ b/yield/src/app/components/trade/edit-trade/edit-trade.component.html
@@ -2,7 +2,7 @@
 <div class="modal-wrap">
   <div class="modal-content-wrap">
 
-    <form class="form" [formGroup]="editTradeRecordForm" (ngSubmit)="submitEditForm()" >
+    <form class="form" name="editTradeRecordForm" [formGroup]="editTradeRecordForm" (ngSubmit)="submitEditForm()" >
 
       <div class="title-wrap">
         <h3 class="text-3xl font-semibold">
@@ -13,20 +13,20 @@
       <div class="py-6">
         <div class="form-content">
           <div>
-            <label>asset</label>
+            <label for="asset">asset</label>
             <input type="text" formControlName="asset">
           </div>
           <div>
-            <label>order id</label>
+            <label for="orderId">order id</label>
             <input type="text" formControlName="orderId" >
           </div>
           <div>
-            <label>date</label>
+            <label for="date">date</label>
             <input type="text" formControlName="date">
           </div>
 
           <div>
-            <label>side</label>
+            <label for="side">side</label>
             <input type="text" formControlName="side">
           </div>
           <span class="error" 
@@ -35,7 +35,7 @@
             Value must be "buy" or "sell".
           </span>
           <div>
-            <label>unit price</label>
+            <label for="unitPrice">unit price</label>
             <input type="text" formControlName="unitPrice">
           </div>
           <span class="error" 
@@ -44,7 +44,7 @@
             Value must be a number.
           </span>
           <div>
-            <label>qty</label>
+            <label for="qty">qty</label>
             <input type="text" formControlName="qty">
           </div>
           <span class="error" 
@@ -53,7 +53,7 @@
             Value must be a number.
           </span>
           <div>
-            <label>amount paid</label>
+            <label for="amountPaid">amount paid</label>
             <input type="text" formControlName="amountPaid">
           </div>
           <span class="error" 
@@ -62,7 +62,7 @@
             Value must be a number.
           </span>
           <div>
-            <label>fee</label>
+            <label for="fee">fee</label>
             <input type="text" formControlName="fee">
           </div>
           <span class="error" 
@@ -71,7 +71,7 @@
             Value must be a number.
           </span>
           <div>
-            <label>currency pair</label>
+            <label for="currencyPair">currency pair</label>
             <input type="text" formControlName="currencyPair">
           </div>
            
