--- a/yield/src/app/components/trade/records-table/records-table.component.css
+++ b/yield/src/app/components/trade/records-table/records-table.component.css
@@ -1,13 +1,13 @@
 .table-wrap {
-  @apply table w-full mb-16 overflow-auto;
+  @apply w-full h-full overflow-x-auto overflow-y-auto;
 }
 
 table {
-  @apply mt-6 border border-slate-300 p-3 mx-auto w-[97%] overflow-auto ;
+  @apply w-full h-full mt-6 border border-slate-300 p-3 mx-auto overflow-x-auto overflow-y-auto;
 }
 
 caption {
-  @apply text-2xl py-3 text-center;
+  @apply text-2xl py-3 capitalize;
 }
 
 tr {
@@ -19,15 +19,19 @@ thead > tr, tbody > tr {
 }
 
 th, td {
-  @apply text-xs max-h-6 break-all w-[10%] px-1;
+  @apply text-xs max-h-6 w-[10%] px-1;
 }
 
 tfoot > tr {
   @apply mr-auto text-right;
 }
 
+/* tfoot > tr:last-child {
+  @apply  bg-slate-200 hover:bg-slate-300 text-center cursor-pointer;
+} */
+
 .preview-btn-wrap {
-  @apply flex justify-center py-1 mx-3 bg-slate-200  hover:bg-slate-400;
+  @apply flex justify-center py-1 bg-slate-200  hover:bg-slate-400;
 }
 
 .preview-btn-wrap > button {
@@ -41,3 +45,10 @@ tfoot > tr {
 button {
   @apply uppercase;
 }
+
+
+/* @media (max-width: 524px) {
+  body {
+    @apply break-normal
+  }
+} */
