--- a/yield/src/app/components/crypto/asset-table/asset-table.component.html
+++ b/yield/src/app/components/crypto/asset-table/asset-table.component.html
@@ -1,4 +1,4 @@
-<table class="w-full">
+<table class="w-full   border border-slate-300 rounded-md overflow-x-scroll">
   <caption>crypto assets</caption>
   <thead>
     <tr class="thead-row">
