--- a/yield/src/app/views/markets/markets.component.css
+++ b/yield/src/app/views/markets/markets.component.css
@@ -1,5 +1,5 @@
 .drop-list-wrap {
-  @apply w-[86%] px-6 overflow-hidden mx-auto;
+  @apply flex flex-wrap w-full px-6 justify-between gap-3 overflow-hidden;
 }
 
 .top-asset-wrap {
@@ -7,11 +7,11 @@
 }
 
 .search-filter-wrap {
-  @apply flex w-[97%] justify-end gap-3 mt-6;
+  @apply flex w-full justify-end px-6 gap-3 mt-6;
 }
 
 .search-filter-wrap > input {
-  @apply max-w-[35%] w-64 px-3 py-1;
+  @apply max-w-[35%] w-64 py-1;
 }
 
 .search-filter-wrap > button {
@@ -19,5 +19,6 @@
 }
 
 .table-wrap {
-  @apply table w-[97%] min-h-[24rem] border border-slate-300 rounded-md overflow-x-auto mt-6 px-3 py-3 ml-3;
+  @apply w-full min-h-[24rem] overflow-auto px-6 mt-6;
+  /* mt-6 px-3 py-3 ml-3; */
 }
