--- a/yield/src/app/components/crypto/asset-table/asset-table.component.css
+++ b/yield/src/app/components/crypto/asset-table/asset-table.component.css
@@ -1,4 +1,7 @@
-
+.asset-table {
+  @apply w-full overflow-x-scroll
+  border border-slate-300 rounded-md;
+}
 
 .thead-row {
   @apply border border-b-slate-300 border-r-0 border-t-0 border-l-0 h-6;
