--- a/yield/src/styles.css
+++ b/yield/src/styles.css
@@ -16,7 +16,8 @@ html, body {
   /* font-family: 'Reenie Beanie', cursive; */
   /* font-family: 'VT323', monospace; */
   font-family: 'Coming Soon', cursive;
-  @apply w-full h-full p-0 m-0 overflow-y-auto overflow-x-hidden text-base;
+  @apply w-full h-full overflow-y-auto overflow-x-hidden 
+  p-0 m-0 text-base;
 }
 
 
